2013-07-17  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/instantiation.h: added the DoubleVector alias
        to NumericVector
        * include/Rcpp/is.h: added is template function

2013-07-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/Attributes.R: Add an OpenMP plugin

2013-07-03  Romain Francois <romain@r-enthusiasts.com>

        * unitTests/runit.modref.R: using sourceCpp
        * unitTests/runit.Module.R: using sourceCpp
        * unitTests/runit.Vector.R: no more uses of inline
        * unitTests/runTests.R: we don't need inline no more for testing
        * doc/unitTests/Rcpp-unitTests.R: idem

2013-07-02  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/Vector.h: fill__dispatch was mispelled (as
        fill_dispatch) for the non trivial case, so it did not work
        * unitTests/runit.Matrix.R: using sourceCpp
        * unitTests/runit.misc.R: using sourceCpp
        * unitTests/runit.wrap.R: using sourceCpp
        * unitTests/runit.support.R: using sourceCpp
        * unitTests/runit.rmath.R: using sourceCpp
        * unitTests/runit.RObject.R: using sourceCpp
        * unitTests/runit.stats.R: using sourceCpp
        * unitTests/runit.XPTr.R: using sourceCpp
        * unitTests/runit.Vector.R: testing List( int, IntegerVector ) which
        eventually uses fill__dispatch
        * include/Rcpp/traits/r_type_traits.h: support for as<T&> and as<const T&>
        when T is module exposed
        * include/Rcpp/as.h: as<T&> and as<const T&> when T is module exposed
        * include/Rcpp/module/Module_generated_CppFunction.h: removed the
        remove_const_and_reference since as<T&> and as<const T&> is supported
        * src/attributes.cpp: automatically populating the environment with
        the content of a module, rather than make the module object available
        in the environment

2013-07-01  Romain Francois <romain@r-enthusiasts.com>
